--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jochen-camacho.github.io/Beats/",
+  "homepage": "https://jochen-camacho.github.io/beats/",
   "name": "xext2pop",
   "version": "0.1.0",
   "private": true,
